<resources>
    <string name="app_name">Tasks</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>

    <string name="hint_name">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>

    <string name="title_signin">Faça seu Login</string>
    <string name="title_signup">Faça seu cadastro</string>
    <string name="title_splash">CARREGANDO...</string>

    <string name="btn_signin">ENTRAR</string>
    <string name="btn_signup">CADASTRAR</string>
    <string name="btn_signup_link">cadastrar-se</string>

    <string name="user_name_header_drawer">Exemplo de Nome</string>
    <string name="user_email_header_drawer">exemplo123.@gmail.com</string>

</resources>